@@ -1,11 +1,9 @@
 {
-  "timestamp" : "2022-05-12T00:39:14Z",
-  "count" : 81,
-  "count_minmax" : [ 0, 81 ],
-  "count_prev_day_inc" : 3,
-  "count_prev_day_dec" : 0,
+  "timestamp" : "2022-05-25T08:10:37Z",
+  "count" : 80,
+  "count_minmax" : [ 80, 81 ],
+  "count_decinc" : [ -1, +0 ],
   "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
-  "uniques_prev_day_inc" : 2,
-  "uniques_prev_day_dec" : 0
+  "uniques_minmax" : [ 1, 1 ],
+  "uniques_decinc" : [ -0, +0 ]
 }
